load("@buckaroo//:defs.bzl", "buckaroo_workspace")

ogg = "@" + buckaroo_workspace("github.com/buckaroo-pm/xiph-ogg") + "//:ogg"

windows_srcs = glob([
  "src/libFLAC/**/windows_*.c",
])

cc_library(
  name = "flac",
  includes = [
    "include",
    "src/libFLAC/include",
  ],
  hdrs = glob([
    "include/**/*.h",
  ]),
  srcs = glob([
    "src/libFLAC/**/*.c",
    "src/**/*.h",
  ],
  exclude = windows_srcs),
  copts = [
    "-std=gnu99",
    "-DPACKAGE_VERSION=\\\"1.3.2\\\"",
    "-DFLAC__HAS_OGG=1",
    "-DHAVE_LROUND",
  ],
  deps = [
    ogg,
  ],
  visibility = [
    "//visibility:public",
  ],
)

cc_library(
  name = 'flac++',
  includes = [
    "include",
    "src/libFLAC++/include",
  ],
  hdrs = glob([
    "include/FLAC++/**/*.h",
    "src/libFLAC++/include/**/*.h",
  ]),
  srcs = glob([
    'src/libFLAC++/**/*.cpp',
  ]),
  deps = [
    '//:flac',
  ],
  visibility = [
    "//visibility:public",
  ],
)

